--- a/index.html
+++ b/index.html
@@ -4,31 +4,29 @@
     <meta charset="UTF-8">
     <meta lang="en">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../ResponsivePortfolio/assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Alexander Delgado</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+  <header>
+    <div class="container col-8 p-0">
+      <div class="row">
+        <div class="col-sm">
+      <nav class="navbar navbar-dark p-0">
+        <span class="navbar-brand mb-0"><h2>Alexander Delgado</h2></span>
+      </nav>
+      </div>
+      <div class="col-sm">
+          <div class="navbar-nav mr-auto mt-3">
+            <p><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a  href="contact.html">Contact</a></p>
         </div>
-    </nav>
-    <div class="container">
+      </div>
+      </div>
+    </div>
+  </header>
+    <div class="container2 col-8">
         <div class="row">
-            <div class="col-sm-12">
-                <h1>About Me</h1>
+            <div class="col-sm-12 mt-3 aboutme">
+                <h2>About Me</h2>
             </div>
         </div>
         <hr>
@@ -50,6 +48,6 @@
         </div>
     </div>
     <footer>
-        <h4>Copyright &copy;</h4>
+        <h6>Copyright &copy;</h6>
     </footer>
 </body>
