--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <title>Responsive Portfolio | About Me</title>
     <meta charset="UTF-8">
     <meta lang="en">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../ResponsivePortfolio/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header>
     <div class="container col-md-8 p-0">
       <div class="row">
         <div class="col-sm">
-      <nav class="navbar navbar-dark p-0">
+      <nav class="navbar navbar-light p-0">
         <span class="navbar-brand mb-0"><h2>Alexander Delgado</h2></span>
       </nav>
       </div>
