--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <div class="container col-md-8 p-0">
       <div class="row">
         <div class="col-sm">
-      <nav class="navbar navbar-dark p-0">
+      <nav class="navbar navbar-light p-0">
         <span class="navbar-brand mb-0"><h2>Alexander Delgado</h2></span>
       </nav>
       </div>
